force-app/main/default/objects/Documentation__kav/fields/Attachment_1__c.field-meta.xml
<CustomField>
    <fullName>Attachment_1__c</fullName>
    <label>Attachment</label>
    <type>File</type>
</CustomField>