force-app/main/default/objects/Documentation__kav/fields/Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Document_Link__c</fullName>
    <label>Document Link</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>