force-app/main/default/objects/Documentation__kav/fields/Internal_Process__c.field-meta.xml
<CustomField>
    <fullName>Internal_Process__c</fullName>
    <label>Internal Process</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>